# Programming-HOWTO

./: Dynamic_Lib-HOWTO.md  README.md
Android/: Android_NDK_HOWTO.md
C++/: Optimization_notes.md  README.md
CV/: OpenCV_HOWTO.md  OpenCV_Internal.md  README.md
Halide/: Halide_Advanced.md  Halide_Basics.md  Halide_Func.md  Halide_Setup.md
Halide/Halide_examples/: CMakeLists.txt  extern_stage.cpp  lesson_09_update_definitions.cpp  my_study_schedule.cpp  run_cmake.bat  test_fft.cpp
Linux/: Linux_Kernel.md
Python/: Anaconda-HOWTO.md  Data_Processing_HOWTO.md  Freq_Used_Code_Snippet.md  Python-Create-Extensions.md  Python-Essential.md  Python_Numpy-HOWTO.md  Python_Visualization-HOWTO.md  Python_XML_Tutorial.ipynb  README.md  iPython_HOWTO.md  matplotlib-HOWTO.md  wxPython-HOWTO.md
SignalProcessing/: Fast_Lib.md  fftw_guide.md
